--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                     <label class="setting-label">排除已抽中</label>
                     <input type="checkbox" id="excludeSelected" checked>
                 </div>
+                <div class="setting-item">
+                    <label class="setting-label">跳过开屏动画</label>
+                    <input type="checkbox" id="skipPreload">
+                </div>
                 <button id="closeSettings" class="close-btn brush-font">关闭</button>
             </div>
         </div>
