--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>点</title>
+    <title>InkLotology 00</title>
+    <meta name="description" content="InkLotology 00 - 水墨命理">
+    <link rel="icon" href="H.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="H.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <!-- 引入Google字体，用于非毛笔字体部分 -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500&display=swap" rel="stylesheet">
@@ -49,6 +52,10 @@
                 <div class="setting-item">
                     <label class="setting-label">跳过开屏动画</label>
                     <input type="checkbox" id="skipPreload">
+                </div>
+                <div class="setting-item">
+                    <label class="setting-label">退出程序</label>
+                    <button id="exitApp" class="exit-btn brush-font">退出</button>
                 </div>
                 <button id="closeSettings" class="close-btn brush-font">关闭</button>
             </div>
