--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InkLotology 00</title>
-    <meta name="description" content="InkLotology 00 - 水墨命理">
+    <meta name="description" content="InkLotology">
     <link rel="icon" href="H.ico" type="image/x-icon">
     <link rel="shortcut icon" href="H.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <!-- 引入Google字体，用于非毛笔字体部分 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
